fix: Threads page shows horizontal scroll bar when window isn't wide enough
fix #78

--- a/plugins/runtime/threads/threads.component.less
+++ b/plugins/runtime/threads/threads.component.less
@@ -1,16 +1,22 @@
 .runtime-threads-table {
-  tr {
-    td:nth-child(1) {
-      text-align: right;
-    }
-    td:nth-child(2) {
-      white-space: nowrap
-    }
-    td:nth-child(3) {
-      max-width: 500px;
-    }
-    td:nth-child(6), td:nth-child(7) {
-      text-align: center;
+  .table {
+    table-layout: fixed;
+    tr {
+      th:nth-child(2) {
+        width: 80px;
+      }
+      th:nth-child(3) {
+        width: 30%;
+      }
+      td:nth-child(1) {
+        text-align: right;
+      }
+      td:nth-child(2) {
+        white-space: nowrap;
+      }
+      td:nth-child(6), td:nth-child(7) {
+        text-align: center;
+      }
     }
   }
 }
